--- a/css/responsive.css
+++ b/css/responsive.css
@@ -763,6 +763,9 @@ License URI:
 /*------------------------------------------------------------------------------------
 / 5. Responsive For Mobile Device
 --------------------------------------------------------------------------------------*/
+.nav_bar {
+  display: none;
+}
 @media (max-width: 767px) {
   .slider_02 .hermes .tp-arr-allwrapper,
   .slider_01 .hermes .tp-arr-allwrapper {
