--- a/css/preset.css
+++ b/css/preset.css
@@ -26,9 +26,9 @@ html {
 }
 body {
   font-family: "Rubik", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 26px;
-  color: #959ba9;
+  color: #333;
   font-weight: 400;
   letter-spacing: 0;
 }
