--- a/css/theme.css
+++ b/css/theme.css
@@ -3750,7 +3750,7 @@ License URI:
 .sda_content {
   font-size: 16px;
   line-height: 28px;
-  color: #6c768e;
+  color: #333;
 }
 .sda_content p {
   margin: 0 0 25px;
